File structure clarified

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,6 @@
   {%- feed_meta -%}
   <script src="{{ "/assets/javascript/bootstrap/jquery.min.js" | relative_url }}"></script>
   <script src="{{ "/assets/javascript/bootstrap/bootstrap.bundle.min.js" | relative_url }}"></script>
-  <link rel="stylesheet" href="/css/bb.css">
-  <link rel="stylesheet" href="/css/ideal-image-slider.css">
+  <link rel="stylesheet" href="../css/bb.css">
+  <link rel="stylesheet" href="../css/ideal-image-slider.css">
 </head>
