--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -7,7 +7,7 @@
 </div>
 <br>
 
-<script src="/js/ideal-image-slider.js"></script>
+<script src="../js/ideal-image-slider.js"></script>
 
 <script>
     var slider = new IdealImageSlider.Slider({
