--- a/_includes/download.html
+++ b/_includes/download.html
@@ -1,3 +1,10 @@
+<head>
+
+    <link rel="stylesheet" href="../css/bb.css">
+
+
+</head>
+
 <div class="text-container no-select">
      <p class="padding-text">
          To download a copy of the app onto your phone/device, select the appropriate platform below:
@@ -5,10 +12,10 @@
      <table id="platform-table">
          <tr>
              <td class="platform-selector">
-                 <img class="platform-ico" src='images/android-card.png' />
+                 <img class="platform-ico" src='/images/android-card.png' />
              </td>
              <td class="platform-selector">
-                 <img class="platform-ico" src='images/apple-ios-logo-png-3.png' />
+                 <img class="platform-ico" src='/images/apple-ios-logo-png-3.png' />
              </td>
          </tr>
          <tr>
