update file route

--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -1,13 +1,13 @@
 
 <br>
 <div id="slider">
-    <img src="../images/slide1.png">
-    <img data-src="../images/slide2.png">
-    <img data-src="../images/slide3.png">
+    <img src="images/slide1.png">
+    <img data-src="images/slide2.png">
+    <img data-src="images/slide3.png">
 </div>
 <br>
 
-<script src="../js/ideal-image-slider.js"></script>
+<script src="js/ideal-image-slider.js"></script>
 
 <script>
     var slider = new IdealImageSlider.Slider({
