--- a/_includes/download.html
+++ b/_includes/download.html
@@ -12,10 +12,10 @@
      <table id="platform-table">
          <tr>
              <td class="platform-selector">
-                 <img class="platform-ico" src='../images/android-card.png' />
+                 <img class="platform-ico" src='images/android-card.png' />
              </td>
              <td class="platform-selector">
-                 <img class="platform-ico" src='../images/apple-ios-logo-png-3.png' />
+                 <img class="platform-ico" src='images/apple-ios-logo-png-3.png' />
              </td>
          </tr>
          <tr>
