--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -1,3 +1,9 @@
+<head> 
+
+<link rel="stylesheet" href="css/bb.css">
+<link rel="stylesheet" href="css/ideal-image-slider.css">
+
+</head>
 
 <br>
 <div id="slider">
