--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,5 @@
   <script src="{{ "/assets/javascript/bootstrap/bootstrap.bundle.min.js" | relative_url }}"></script>
   <link rel="stylesheet" href="../css/bb.css">
   <link rel="stylesheet" href="../css/ideal-image-slider.css">
+  <link rel="icon" href="../favicon.ico" type="image/x-icon">
 </head>
