NEW IMAGE - added  sponsor logo for the UTFPR

--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -9,8 +9,11 @@
         <td>
             <img id="spons-3" class="sponsor-ico" src='../images/TAB_col_white_background.png' />
         </td>
-            <td>
+        <td>
             <img id="spons-3" class="sponsor-ico" src='../images/Versao1_aumentada.jpg' />
+        </td>
+        <td>
+            <img id="spons-3" class="sponsor-ico" src='../images/logo_UTFPR_cor.png' />
         </td>
     </tr>
 </table>
