--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,9 +13,9 @@
     <li class="nav-item">
       <a class="nav-link" href="/team">Team</a>
     </li>
-    <li class="nav-item">
+    <!-- <li class="nav-item">
       <a class="nav-link" href="/publications">Publications</a>
-    </li>
+    </li> -->
     <li class="nav-item">
       <a class="nav-link" href="/contact">Contact</a>
     </li>
