--- a/_includes/team.html
+++ b/_includes/team.html
@@ -199,5 +199,16 @@
                             <span class="small-uni-txt">University of Manchester, UK</span>
                         </td>
                    </tr>
+                   <tr>
+                    <td id="name_3" class="col-cell-bio no-select ">
+                            <div id="colab_3" class="circular-portrait-mini">
+                                <img class="circularportrait-img" src="../images/sc.png" />
+                            </div>
+                            Prof. Sheena Cruikshank<br>
+                            <span class="small-uni-txt">University of Manchester, UK</span>
+                        </td>
+                   </tr>
+
+
                </table>
 </div>
