translated to portuguese

--- a/_includes/download.html
+++ b/_includes/download.html
@@ -6,20 +6,23 @@
 
 <div class="text-container no-select">
      <p class="padding-text">
-         To download a copy of the app onto your phone/device, select the appropriate platform below:
+         <!-- To download a copy of the app onto your phone/device, select the appropriate platform below: -->
+         Para baixar o aplicativo em seu celular, selecione a plataforma apropriada abaixo:
      </p>
      <table id="platform-table">
          <tr>
              <td class="platform-selector">
-                 <img class="platform-ico" src='images/android-card.png' />
+                <a href="www.google.com">
+                <img src='images/google-play-badge.png'/>
+                  </a>
              </td>
-             <td class="platform-selector">
+             <!-- <td class="platform-selector">
                  <img class="platform-ico" src='images/apple-ios-logo-png-3.png' />
-             </td>
+             </td> -->
          </tr>
          <tr>
-             <td class="platform-text">Android</td>
-             <td class="platform-text">iOS</td>
+             <!-- <td class="platform-text">Android</td> -->
+             <!-- <td class="platform-text">iOS</td> -->
          </tr>
      </table>
  </div>
