--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,21 +3,24 @@
     
     
     <a class="navbar-brand flex-fill" rel="author" href="{{ "/" | relative_url }}">
-        <img src="../images/bb-logo-opaque.png" height="80px" alt="">
+        <img src="../images/bb-logo-opaque.png" height="120px" alt="">
     </a>
 
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" href="/about">About</a>
+      <!-- <a class="nav-link" href="/about">About</a> -->
+      <a class="nav-link" href="/sobre">Sobre</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/team">Team</a>
+      <!-- <a class="nav-link" href="/team">Team</a> -->
+      <a class="nav-link" href="/quem_somos">Quem somos</a>
     </li>
     <!-- <li class="nav-item">
       <a class="nav-link" href="/publications">Publications</a>
     </li> -->
     <li class="nav-item">
-      <a class="nav-link" href="/contact">Contact</a>
+      <!-- <a class="nav-link" href="/contact">Contact</a> -->
+      <a class="nav-link" href="/contato">Contato</a>
     </li>
   </ul>
 
