dummy link added until app is on the store

--- a/_includes/download.html
+++ b/_includes/download.html
@@ -12,7 +12,7 @@
      <table id="platform-table">
          <tr>
              <td class="platform-selector">
-                <a href="www.google.com">
+                <a href="https://play.google.com/store">
                 <img src='images/google-play-badge.png'/>
                   </a>
              </td>
