Changed size of Google Play logo

--- a/_includes/download.html
+++ b/_includes/download.html
@@ -13,7 +13,7 @@
          <tr>
              <td class="platform-selector">
                 <a href="https://play.google.com/store">
-                <img src='images/google-play-badge.png'/>
+                <img src='images/google-play-badge.png' style="max-width: 50%"/>
                   </a>
              </td>
              <!-- <td class="platform-selector">
