--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,19 +8,16 @@
 
   <ul class="navbar-nav">
     <li class="nav-item">
-      <!-- <a class="nav-link" href="/about">About</a> -->
-      <a class="nav-link" href="/sobre">Sobre</a>
+      <a class="nav-link" href="/Sobre" style="font-size: large;">Sobre</a>
     </li>
     <li class="nav-item">
-      <!-- <a class="nav-link" href="/team">Team</a> -->
-      <a class="nav-link" href="/quem_somos">Quem somos</a>
+      <a class="nav-link" href="/quem_somos" style="font-size: large;">Quem Somos</a>
     </li>
     <!-- <li class="nav-item">
       <a class="nav-link" href="/publications">Publications</a>
     </li> -->
     <li class="nav-item">
-      <!-- <a class="nav-link" href="/contact">Contact</a> -->
-      <a class="nav-link" href="/contato">Contato</a>
+      <a class="nav-link" href="/contato" style="font-size: large;">Contato</a>
     </li>
   </ul>
 
