Added header to includes

--- a/_includes/download.html
+++ b/_includes/download.html
@@ -4,6 +4,11 @@
 
 </head>
 
+
+<br>
+
+<h3>Download</h3>
+
 <div class="text-container no-select">
      <p class="padding-text">
          <!-- To download a copy of the app onto your phone/device, select the appropriate platform below: -->
@@ -13,7 +18,7 @@
          <tr>
              <td class="platform-selector">
                 <a href="https://play.google.com/store">
-                <img src='images/google-play-badge.png' style="max-width: 50%"/>
+                <img src='images/google-play-badge.png' style="max-width: 50%;float: left;"/>
                   </a>
              </td>
              <!-- <td class="platform-selector">
