--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
 
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" href="/Sobre">Sobre</a>
+      <a class="nav-link" href="/sobre">Sobre</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="/quem_somos">Quem Somos</a>
