added download link

--- a/_includes/download.html
+++ b/_includes/download.html
@@ -17,7 +17,7 @@
      <table id="platform-table">
          <tr>
              <td class="platform-selector">
-                <a href="https://play.google.com/store">
+                <a href="https://play.google.com/store/apps/details?id=uk.ac.manchester.brazilbreathing">
                 <img src='images/google-play-badge.png' style="max-width: 50%;float: left;"/>
                   </a>
              </td>
