Added App store logoi and link

--- a/_includes/download.html
+++ b/_includes/download.html
@@ -16,18 +16,23 @@
      </p>
      <table id="platform-table">
          <tr>
+
              <td class="platform-selector">
                 <a href="https://play.google.com/store/apps/details?id=uk.ac.manchester.brazilbreathing">
                 <img src='images/google-play-badge.png' style="max-width: 50%;float: left;"/>
                   </a>
              </td>
-             <!-- <td class="platform-selector">
-                 <img class="platform-ico" src='images/apple-ios-logo-png-3.png' />
-             </td> -->
+    
          </tr>
+
          <tr>
-             <!-- <td class="platform-text">Android</td> -->
-             <!-- <td class="platform-text">iOS</td> -->
-         </tr>
-     </table>
+             
+             <td class="platform-selector">
+                    <a href="https://apps.apple.com/us/app/brazil-breathing/id1469182083?ls=1">
+                 <img src='images/apple_app_store.svg' style='width:44%; height:100%; float: left; margin-left: 15pt;'/>
+                 </a>
+             </td>      
+     </tr>
+     
+        </table>
  </div>
